--- a/.github/workflows/arma.yml
+++ b/.github/workflows/arma.yml
@@ -44,11 +44,11 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v2-preview
       with:
-        name: taskforce47-client-mod
-        path: releases/tf47_mod_*.zip
+        name: taskforce47_client_mod
+        path: releases/taskforce47_client_mod*.zip
 
   job_release:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     needs: [build]
     steps:
@@ -56,13 +56,13 @@ jobs:
       - name: Download latest build
         uses: actions/download-artifact@v2
         with:
-          name: taskforce47-client-mod
+          name: taskforce47_client_mod
 
       # zip it
       - uses: papeloto/action-zip@v1
         with:
-          files: \@taskforce47-client-mod/
-          dest: \@taskforce47-client-mod.zip
+          files: \@taskforce47_client_mod/
+          dest: \@taskforce47_client_mod.zip
 
       # release it
       - uses: "marvinpinto/action-automatic-releases@latest"
@@ -70,4 +70,4 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           files: |
-            \@taskforce47-client-mod.zip
+            \@taskforce47_client_mod.zip
