--- a/hemtt.toml
+++ b/hemtt.toml
@@ -1,4 +1,4 @@
-name = "TF47 client mod"
+name = "taskforce47_client_mod"
 modname = "taskforce47_client_mod"
 prefix = "TF47"
 author = "TF47 Development Team"
